added database operations to endpoints
